# sistem-de-gestiune-al-unei-cafenele

./: .gitattributes  CMakeLists.txt  README.md  main.cpp  tastatura.txt
.github/workflows/: ci.yml
assets/: inventar.txt  produse.txt
include/: Bautura.h  Cafenea.h  Comanda.h  Desert.h  Exceptii.h  Ingredient.h  Inventar.h  Produs.h  Reteta.h  Sandwich.h
src/: Bautura.cpp  Cafenea.cpp  Comanda.cpp  Desert.cpp  Ingredient.cpp  Inventar.cpp  Produs.cpp  Reteta.cpp  Sandwich.cpp  main.cpp
